# CLI-Application

./: .gitignore  pyproject.toml
cli_todo/: __init__.py  main.py  mytodos.txt
