[tool.poetry]
name = "cli-todo"
version = "0.1.0"
description = "My first application"
authors = ["Erica Smith <NubianDev2.0.com>"]
readme = "README.md"

[tool.poetry.scripts]
nubian = "cli_todo:nubian"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
